# kapto_web

./: .dockerignore  Cargo.toml  Dockerfile  build.rs  docker-compose.yaml  my_sql_env.txt
example/: standard_rules.json  test_rules.json
sql/stored_procedures/ruleset/: delete_ruleset.sql  get_ruleset_by_id.sql  get_rulesets_for_user.sql  insert_ruleset.sql
sql/stored_procedures/token/: create_token.sql  get_token_by_id.sql
sql/stored_procedures/user/: delete_user.sql  get_user_by_email.sql  get_user_by_id.sql  get_user_by_username.sql  insert_user.sql
src/: chat.rs  main.rs  util.rs
src/api/: generic.rs  mod.rs  token.rs  user.rs
src/database/: account_util.rs  connection_pool.rs  mod.rs  paging.rs  procedures.rs  ruleset.rs  token.rs  user.rs
src/game/: coordinate.rs  direction.rs  mod.rs
src/game/ruleset/: color.rs  mod.rs  piece_definition.rs  shape.rs  standard.rs  victory_condition.rs
src/game/ruleset/board_type/: mod.rs  space.rs
src/game/ruleset/starting_positions/: alteration_type.rs  mod.rs  piece_limit.rs  placement_area.rs
website/: .babelrc  package-lock.json  package.json  tsconfig.json  webpack.config.dev.js  webpack.config.prod.js  webpack.dev.conf.js
website/html/: bouncing_balls.html  canvas.html  chat.html  index.html  login.html  ruleset_builder.html
website/src/: bouncing_balls.tsx  canvas.ts  chat.ts  index.ts  index.tsx  login.tsx  ruleset_builder.tsx
website/src/modules/: Board.tsx  LoginState.ts  Page.tsx  QueryParams.ts  RulesetBuilder.tsx  cookie.ts
website/src/modules/api/: AuthToken.ts  api.ts  generic.ts  user.ts
(+15 files in other folders)
