[package]
name = "kapto_web"
version = "0.1.0"
authors = ["Brett Etter <bbetter9101@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2.5"
futures = "0.3.8"
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0.118", features = ["derive"] }
