[package]
name = "kapto_web"
version = "0.1.0"
authors = ["Brett Etter <bbetter9101@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2.5"
futures = "0.3.8"
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
ndarray = { version = "0.14.0", features = ["serde"] }
bitflags = "1.2.1"
mysql_async = "0.25.0"
pbkdf2 = "0.6.0"
rand = "0.8.0"
rand_core = { version = "0.5.1", features = ["std"] }
